--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 spring.datasource.url=jdbc:mysql://localhost:3306/tronder?&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=tronder
 spring.datasource.password=secure-password
@@ -14,3 +15,9 @@ spring.security.user.password=password
 
 server.port=1234
 logging.level.org.springframework.web=DEBUG
+
+jwt.keys.one.modulus=${AWS_MODULUS_ONE}
+jwt.keys.one.kid=${AWS_KEY_ONE}
+
+jwt.keys.two.modulus=${AWS_MODULUS_TWO}
+jwt.keys.two.kid=${AWS_KEY_TWO}
