added read of modulus and more tests, and added a jwt generator with rsa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,14 +10,14 @@ spring.datasource.password=secure-password
 corsUrl=http://localhost:8080
 
 spring.security.user.password=password
-# security.basic.enabled=false
-# management.security.enabled=false
 
 server.port=1234
 logging.level.org.springframework.web=DEBUG
 
 jwt.keys.one.modulus=${AWS_MODULUS_ONE}
 jwt.keys.one.kid=${AWS_KEY_ONE}
+jwt.keys.one.exponent=${AWS_EXPONENT_ONE}
 
 jwt.keys.two.modulus=${AWS_MODULUS_TWO}
 jwt.keys.two.kid=${AWS_KEY_TWO}
+jwt.keys.two.exponent=${AWS_EXPONENT_TWO}
