--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
-spring.datasource.url=jdbc:mysql://localhost:3306/tronder?&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=${DEV_DB_PATH}
 spring.datasource.username=${DEV_DB_NAME}
 spring.datasource.password=${DEV_DB_PASSWORD}
 
