--- a/user-provider/requirements.txt
+++ b/user-provider/requirements.txt
@@ -1,12 +1,16 @@
 astroid==2.3.2
 atomicwrites==1.3.0
 attrs==19.3.0
+boto3==1.10.5
+botocore==1.13.5
 Click==7.0
+docutils==0.15.2
 Flask==1.1.1
 importlib-metadata==0.23
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+jmespath==0.9.4
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -17,9 +21,12 @@ py==1.8.0
 pylint==2.4.3
 pyparsing==2.4.2
 pytest==5.2.2
+python-dateutil==2.8.0
+s3transfer==0.2.1
 six==1.12.0
 typed-ast==1.4.0
--e git+git@github.com:halv00rsen/tronder-backend.git@ba792ce48bd957ebf91cbc2c8bd61fa39aaa5bfb#egg=user_identity&subdirectory=user-provider/src
+urllib3==1.25.6
+-e git+git@github.com:halv00rsen/tronder-backend.git@387820a9b35b8e153d1486f550e480a86807b90a#egg=user_identity&subdirectory=user-provider/src
 wcwidth==0.1.7
 Werkzeug==0.16.0
 wrapt==1.11.2
