--- a/user-provider/requirements.txt
+++ b/user-provider/requirements.txt
@@ -21,12 +21,13 @@ py==1.8.0
 pylint==2.4.3
 pyparsing==2.4.2
 pytest==5.2.2
+pytest-mock==1.11.2
 python-dateutil==2.8.0
 s3transfer==0.2.1
 six==1.12.0
 typed-ast==1.4.0
 urllib3==1.25.6
--e git+git@github.com:halv00rsen/tronder-backend.git@387820a9b35b8e153d1486f550e480a86807b90a#egg=user_identity&subdirectory=user-provider/src
+-e git+git@github.com:halv00rsen/tronder-backend.git@af71888ac23eb01b11277056c5815465f4162510#egg=user_identity&subdirectory=user-provider
 wcwidth==0.1.7
 Werkzeug==0.16.0
 wrapt==1.11.2
