--- a/api/src/main/resources/application-dev.properties
+++ b/api/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
-spring.datasource.url=${DEV_DB_PATH}
-spring.datasource.username=${DEV_DB_NAME}
-spring.datasource.password=${DEV_DB_PASSWORD}
 
 cors.url=http://localhost:3000
+
+user.provider.url=http://localhost:5000/userinfo/
 
 logging.level.org.springframework.web=DEBUG
