--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=${DEV_DB_PATH}
+spring.datasource.username=${DEV_DB_NAME}
+spring.datasource.password=${DEV_DB_PASSWORD}
 
 server.port=1234
 
@@ -10,3 +13,4 @@ jwt.keys.one.exponent=${AWS_EXPONENT_ONE}
 jwt.keys.two.modulus=${AWS_MODULUS_TWO}
 jwt.keys.two.kid=${AWS_KEY_TWO}
 jwt.keys.two.exponent=${AWS_EXPONENT_TWO}
+
