added read of cors url for prod as env-variable

--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 
 spring.jpa.hibernate.ddl-auto=update
 
-cors.url=http://localhost:3000
+cors.url=${FRONT_END_URL}
 
 user.provider.url=http://localhost:5000/userinfo/
